# notification_server

./: .env.example  Cargo.toml  README.md
src/: main.rs
